[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/bonsai.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/trunk.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/pot_normal.png" type="Texture" id=3]

[node name="root" type="Node2D"]

script/script = ExtResource( 1 )

[node name="trunk" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="branch0" type="Sprite" parent="trunk"]

[node name="branch1" type="Sprite" parent="trunk"]

[node name="branch2" type="Sprite" parent="trunk"]

[node name="branch3" type="Sprite" parent="trunk"]

[node name="branch4" type="Sprite" parent="trunk"]

[node name="branch5" type="Sprite" parent="trunk"]

[node name="pot" type="Sprite" parent="."]

transform/pos = Vector2( 0, 179.931 )
transform/scale = Vector2( 1.1081, 1.32053 )
z/z = -1
texture = ExtResource( 3 )


